--- a/src/main/resources/name_ja.properties
+++ b/src/main/resources/name_ja.properties
@@ -3,14 +3,14 @@
 #
 # Written by Naohide Sano
 #
-# @author	<a href=mailto:"vavivavi@yahoo.co.jp">Naohide Sano</a> (nsano)
-# @version	0.00	040315	nsano	initial version
+# @author <a href=mailto:"vavivavi@yahoo.co.jp">Naohide Sano</a> (nsano)
+# @version 0.00 040315 nsano initial version
 #
 
-UP=Å™
-LEFT=Å©
-RIGHT=Å®
-DOWN=Å´
+UP=‚Üë
+LEFT=‚Üê
+RIGHT=‚Üí
+DOWN=‚Üì
 NUMPAD0=0
 NUMPAD1=1
 NUMPAD2=2
@@ -23,11 +23,11 @@ NUMPAD8=8
 NUMPAD9=9
 ASTERISK=*
 SHARP=#
-ONHOOK=Åõ
-OFFHOOK=Å~
-CENTER=Å°
+ONHOOK=‚óã
+OFFHOOK=√ó
+CENTER=‚ñ†
 NW=NW
 NE=NE
 SW=SW
 SE=SE
-CLEAR=∏ÿ±
+CLEAR=„ÇØ„É™„Ç¢
